manifests/sparkdemo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spark
  creationTimestamp: null
  labels:
    app: spark-deploy
  name: spark-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spark-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spark-deploy
    spec:
      containers:
        - image: alexandersarson/sparkjava:v4
          name: spark
          ports:
            - containerPort: 4567
          resources: {}
status: {}
