manifests/sparkdemo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: spark
  creationTimestamp: null
  labels:
    app: spark-deploy
  name: spark-deploy
spec:
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 4567
  selector:
    app: spark-deploy
  type: ClusterIP
status:
  loadBalancer: {}
