manifests/sparkdemo-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "spark"
  namespace: spark
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - spark.sarson.me
      secretName: spark-sarson-me-tls
  rules:
    - host: spark.sarson.me
      http:
        paths:
          - backend:
              serviceName: spark-deploy
              servicePort: 4567
